--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+             
               "src/styles.css"
             ],
             "scripts": [],
@@ -84,6 +85,8 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+
+               "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
